[package]
name = "cairo_prover"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "cairo_prover"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31.0"
cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", version = "0.9.0"}
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", version = "0.9.0"}
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", version = "0.9.0"}
bincode = "2.0.0-rc.3"
serde_json = { version = "1.0", features = ["preserve_order"] }
hashbrown = { version = "0.14.0", features = ["serde"] }
starknet-crypto = "0.7.1"
starknet-curve = "0.5.0"
starknet-types-core = { version = "0.1.3", default-features = false, features = ["curve"] }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
num-integer = { version = "0.1.45", default-features = false }
rand = "0.8.5"
lazy_static = "1.4"
